@@ -1429,3 +1429,7 @@
 2013-06-16  ChunEon Park (Hermet)
 
         * Naviframe: Dont' be popped if the event is freezed and popping is going on.
+
+2013-06-18  Jaehwan Kim
+
+        * In case of scroll in scroll, the child scroller have to bounce if parents don't have a bounce.
